Upgrade aws-erlang

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {erl_opts, [debug_info]}.
 {edoc_opts, [{dir, "edoc"}]}.
-{deps, [{aws, "master",
-         {git, "https://github.com/jkakar/aws-erlang.git",
+{deps, [{aws, ".*",
+         {git, "https://github.com/aws-beam/aws-erlang.git",
           {branch, "master"}}},
         {iso8601, ".*",
          {git, "https://github.com/oubiwann/erlang_iso8601.git",
@@ -12,8 +12,6 @@
 {profiles, [
     {test, [
         {deps, [
-            {cth_readable,
-                {git, "https://github.com/ferd/cth_readable.git", {branch, "master"}}},
             {meck,".*",
                     {git,"https://github.com/eproxus/meck.git",
                         {tag, "0.8.3"}}}
