--- a/rebar.config
+++ b/rebar.config
@@ -1,20 +1,17 @@
 {erl_opts, [debug_info]}.
 {edoc_opts, [{dir, "edoc"}]}.
-{deps, [{aws, ".*",
-         {git, "https://github.com/aws-beam/aws-erlang.git",
-          {branch, "master"}}},
-        {iso8601, ".*",
-         {git, "https://github.com/oubiwann/erlang_iso8601.git",
-          {ref, "fix-erlang-18-compile-issue"}}}
-]}.
+{deps, [
+        jsone,
+        iso8601,
+        {eini, {git, "https://github.com/aws-beam/eini.git", {tag, "2.0.0"}}}
+       ]}.
 
 {ct_opts, [{ct_hooks, [cth_readable_failonly, cth_readable_shell]}]}.
+
 {profiles, [
-    {test, [
-        {deps, [
-            {meck,".*",
-                    {git,"https://github.com/eproxus/meck.git",
-                        {tag, "0.8.3"}}}
-       ]}
-   ]}
+    {test, [{deps, [
+                meck
+               ]}
+           ]
+    }
 ]}.
