Fix edoc target

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {erl_opts, [debug_info]}.
-{edoc_opts, [{dir, "edoc"}]}.
+{edoc_opts, [{dir, "edoc"}, {preprocess, true}]}.
 {deps, [
         jsone,
         iso8601,
