--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,8 @@ jobs:
       with:
         name: ct-logs
         path: _build/test/logs
+    - name: Run Checks
+      run: rebar3 dialyzer
     - name: Create Cover Reports
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
