--- a/rebar.config
+++ b/rebar.config
@@ -1,20 +1,21 @@
 {erl_opts, [debug_info]}.
 {edoc_opts, [{dir, "edoc"}, {preprocess, true}]}.
-{deps, [
-        jsone,
-        iso8601,
-        {eini, {git, "https://github.com/aws-beam/eini.git", {tag, "2.0.0"}}}
+{deps, [ jsx
+       , iso8601
+       , {eini, {git, "https://github.com/aws-beam/eini.git", {tag, "2.0.0"}}}
        ]}.
 
 {ct_opts, [{ct_hooks, [cth_readable_failonly, cth_readable_shell]}]}.
 
-{profiles, [
-    {test, [{deps, [
-                meck
-               ]}
-           ]
+{ profiles
+, [ { test
+    , [ { deps
+        , [meck]
+        }
+      ]
     }
-]}.
+  ]
+}.
 
 {xref_checks, [ undefined_function_calls
               , undefined_functions
