--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [ debug_info
+           , warn_missing_spec_all
+           ]}.
 {edoc_opts, [{dir, "edoc"}, {preprocess, true}]}.
 {deps, [ jsx
        , iso8601
