--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
           ${{ runner.os }}-dialyzer-
     - name: Compile
       run: rebar3 compile
+    - name: Lint
+      run: rebar3 lint
     - name: Run EUnit Tests
       run: rebar3 eunit
     - name: Run CT Tests
