--- a/rebar.config
+++ b/rebar.config
@@ -14,6 +14,10 @@
     , [ { deps
         , [meck]
         }
+      , { erl_opts, [ nowarn_export_all
+                    , nowarn_missing_spec_all
+                    ]
+        }
       ]
     }
   ]
