--- a/elvis.config
+++ b/elvis.config
@@ -32,6 +32,7 @@
                                                                    , {left , "=/="}
                                                                    ]}}
                       , {elvis_style, dont_repeat_yourself, #{ min_complexity => 15 }}
+                      , {elvis_text_style, line_length, #{limit => 100, skip_comments => whole_line}}
                       ]
          }
       , #{ dirs    => ["."]
