--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {edoc_opts, [{dir, "edoc"}, {preprocess, true}]}.
 {deps, [ jsx
        , iso8601
-       , {eini, {git, "https://github.com/aws-beam/eini.git", {tag, "2.1.0"}}}
+       , {eini, "2.2.3", {pkg, eini_beam}} %% eini_beam should look like plain eini
        ]}.
 
 {ct_opts, [{ct_hooks, [cth_readable_failonly, cth_readable_shell]}]}.
