Fix #52: Generate hexdocs so they're uploaded whenever a new package is published
- Fix specs that were referring to the wrong module

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Run EUnit Tests
         run: rebar3 eunit
 
+      - name: Generate docs
+        run: rebar3 ex_doc
+
       - uses: ncipollo/release-action@v1
         with:
           generateReleaseNotes: true
