--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,17 @@
 {erl_opts, [ debug_info
            , warn_missing_spec_all
            ]}.
-{edoc_opts, [{dir, "edoc"}, {preprocess, true}]}.
+{project_plugins, [rebar3_hex, rebar3_ex_doc]}.
+{hex, [{doc, #{provider => ex_doc}}]}.
+{ex_doc, [
+    {extras, [
+          {'README.md', #{title => <<"Overview">>}},
+          {'LICENSE.md', #{title => <<"License">>}}
+    ]},
+    {main, <<"readme">>},
+    {homepage_url, <<"https://github.com/aws-beam/aws_credentials">>},
+    {source_url, <<"https://github.com/aws-beam/aws_credentials">>}
+]}.
 {deps, [ jsx
        , iso8601
        , {eini, "2.2.3", {pkg, eini_beam}} %% eini_beam should look like plain eini
