--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,9 +52,11 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: rebar3 cover
     - name: Produce Documentation
-      run: rebar3 edoc
+      run: rebar3 edoc || true
+    - name: Produce Documentation
+      run: rebar3 ex_doc || true
     - name: Publish Documentation
       uses: actions/upload-artifact@v1
       with:
         name: edoc
-        path: edoc
+        path: doc
