Implement a provider for web identity tokens

--- a/rebar.config
+++ b/rebar.config
@@ -40,4 +40,6 @@
               , deprecated_functions
               ]}.
 
+{dialyzer, [{plt_extra_apps, [xmerl]}]}.
+
 {plugins, [ {rebar3_lint, "3.0.1"} ]}.
